# nanocoop

./: .env.example  .gitignore  Makefile  README.md  eval_report.md  findings.txt  pyproject.toml
artifacts/: honest_eval_slice.json
configs/: offline_dungeongrid_smoke.yaml  offline_overcooked_v2_gpt41_nano.yaml  offline_overcooked_v2_qwen35_4b.yaml  offline_smoke.yaml  prompt_opt_dungeongrid_smoke.yaml  prompt_opt_overcooked_v2_gpt41_nano_gpt54_budget.yaml  prompt_opt_overcooked_v2_qwen35_4b_gpt54_budget.yaml  prompt_opt_smoke.yaml  react_dungeongrid_gpt41_nano_squad_deterministic_warden.yaml  react_dungeongrid_gpt41_nano_squad_react_warden.yaml  react_dungeongrid_gpt54_nano_duo.yaml  react_dungeongrid_gpt54_nano_duo_bosscheck.yaml  react_dungeongrid_gpt54_nano_duo_roster.yaml  react_dungeongrid_gpt54_nano_solo.yaml  react_dungeongrid_gpt54_nano_solo_bosscheck.yaml  react_dungeongrid_gpt54_nano_solo_roster.yaml  react_dungeongrid_gpt54_nano_squad_roster.yaml  react_dungeongrid_gpt5_nano_duo_bosscheck.yaml  react_dungeongrid_gpt5_nano_duo_bosscheck_short.yaml  react_dungeongrid_gpt5_nano_solo.yaml  react_dungeongrid_gpt5_nano_solo_bosscheck.yaml  react_dungeongrid_gpt5_nano_solo_bosscheck_short.yaml  rlvr_dungeongrid_smoke.yaml  rlvr_overcooked_v2_gpt41_nano_2xa100_20min.yaml  rlvr_overcooked_v2_qwen35_4b_2xa100_20min.yaml  rlvr_smoke.yaml  starter_agent_gpt41_nano_dungeongrid.yaml  starter_agent_gpt41_nano_dungeongrid_duo.yaml  starter_agent_gpt41_nano_dungeongrid_solo.yaml  starter_agent_gpt41_nano_dungeongrid_squad.yaml  starter_agent_gpt41_nano_dungeongrid_trio.yaml  starter_agent_gpt41_nano_overcooked_v2.yaml
docker/: local.Dockerfile
docs/: better_mechanics.txt  dungeongrid-quest-schema.md  partner-zoo.md  task-dungeongrid.md  task-overcooked-v2.md
docs/tracks/: offline_20min_1xa100_40gb.md  prompt_opt_1usd_gpt54_family.md  rlvr_20min_2xa100_40gb.md
experiments/SMR-first-coop-pass-v2/: experiment_log.txt
experiments/repo_task_main/: experiment_log.txt
nanocoop/: __init__.py  eval_slice.py  policy.py  run_starter_agent.py
records/: README.md
reports/: final_report.md  nc-smoke-20260413.md
scripts/: config_output_dir.py  run_offline_training.sh  run_offline_training_gpt41_nano.sh  run_overcooked_prompt_opt_gpt41_nano_gpt54_budget.sh  run_overcooked_prompt_opt_qwen35_4b_gpt54_budget.sh  run_overcooked_rlvr_gpt41_nano_2xa100_20min.sh  run_overcooked_rlvr_qwen35_4b_2xa100_20min.sh  run_smoke_all.sh  run_starter_agent_gpt41_nano.sh  with_timeout.py
smr/: execution_profiles.toml
src/nanocoop/: __main__.py  cli.py  constants.py  data.py  episode_plan.py  evaluation.py  io.py  partner_zoo.py  policy.py  prompts.py  record_bundle.py  schema.py  score.py
src/nanocoop/baselines/: __init__.py  offline_sft.py  prompt_opt.py  (+1 more)
submission/: agent.py
tests/: test_smoke.py
(+21 files in other folders)
