[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanocoop"
version = "0.1.0"
description = "NanoCoop: post-training benchmark scaffold for cooperative LLM agents on OvercookedV2"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "OpenAI"},
]
dependencies = [
  "numpy>=1.26",
  "PyYAML>=6.0",
  "requests>=2.31",
]

[project.optional-dependencies]
overcookedv2 = [
  "imageio[pillow]>=2.34",
  "jaxmarl>=0.1.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.5.0",
]

[project.scripts]
nanocoop = "nanocoop.cli:main"

[tool.uv]
package = true

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
