[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanocoop"
version = "0.1.0"
description = "NanoCoop: post-training benchmark scaffold for cooperative LLM agents on OvercookedV2"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "OpenAI"},
]
dependencies = [
  "dungeongrid @ file:///Users/joshpurtell/Documents/GitHub/DungeonGrid/dist/dungeongrid-0.1.0a6-py3-none-any.whl",
  "numpy>=1.26",
  "pydantic>=2.0",
  "PyYAML>=6.0",
  "requests>=2.31",
]

[project.optional-dependencies]
overcookedv2 = [
  "imageio[pillow]>=2.34",
  "imageio-ffmpeg>=0.6.0",
  "jaxmarl>=0.1.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.5.0",
]

[project.scripts]
nanocoop = "nanocoop.cli:main"

[tool.uv]
package = true

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
